--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "stainless_pm"
 version = "0.1.0"
 edition = "2018"
-authors = "flareflo"
+author = "flareflo"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
