--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ chrono = "0.4.19"
 pad = "0.1.6"
 sysinfo = "0.20.3"
 #slpm-file = "0.1.0"
-slpm-file = { path = "/home/flareflo/CLionProjects/slpm-file"}
+#slpm-file = { path = "/home/flareflo/CLionProjects/slpm-file"}
+slpm-file = { path = "C:\\Users\\flori\\CLionProjects\\slpm-file"}
