--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,13 @@ rand = "0.8.4"
 chrono = "0.4.19"
 pad = "0.1.6"
 sysinfo = "0.20.3"
+
+# Not used since the Crates.io version is not up-to-date
 #slpm-file = "0.1.0"
-#slpm-file = { path = "/home/flareflo/CLionProjects/slpm-file"}
-slpm-file = { path = "C:\\Users\\flori\\CLionProjects\\slpm-file"}
+
+# OS specific local imports thanks to local developement
+[target.'cfg(unix)'.dependencies]
+slpm-file = { path = "/home/flareflo/CLionProjects/slpm-file"}
+
+[target.'cfg(windows)'.dependencies]
+#slpm-file = { path = "C:\\Users\\flori\\CLionProjects\\slpm-file"}
